@@ -1,8 +1,9 @@
 Dosage 1.14 (released xx.xx.2013)
 
 Features:
-- comics: Added KeenSpot comic strips, enable ComicGenesis
-  comic strips, added DerFlix, FonFlatter, FullFrontalNerdity,
+- comics: Added KeenSpot comic strips and enable ComicGenesis
+  comic strips
+- comics: Added CucumberQuest, DerFlix, FonFlatter, FullFrontalNerdity,
   GeeksNextDoor, KickInTheHead, OrnerBoy, Ruthe.
   Closes: GH bug #15
 
